--- a/templates/about.html
+++ b/templates/about.html
@@ -10,7 +10,7 @@
 </div>
 <div class="container guarantee-container mb-4">
     <div class="row">
-        <h5 class="p-3 text-justify"> We know that your network is the heart of your business and the core of your operations. We want to stay three steps ahead of potentialities when it comes to supporting our client’s network. We are as responsive and proactive as you specify and are front and center whether we are remote or on location — your choice. We sign up for whatever it takes to be successful with our customers. That’s what we build our business on.</h5>
+        <h5 class="p-3 text-justify"> We know that your network is the heart of your business and the core of your operations. We want to stay three steps ahead of potentialities when it comes to supporting our client’s network. We are as responsive and proactive as you specify and can assist you both locally or remotely.  Our team will do whatever it takes to successfully handle any issues you're having.  That’s what we build our business on.</h5>
     </div>
     <div class="row">
         <div class="col-sm">
