--- a/templates/contact.html
+++ b/templates/contact.html
@@ -8,6 +8,14 @@
         </div>
     </div>
 </div>
+<div class="card">
+  <div class="container-fluid sol-body w-50">
+      <form class="text-white pb-5" method="post">
+          {% csrf_token%} {% bootstrap_form form %}
+          <input type="submit" value="Contact Us">
+      </form>
+  </div>
+</div>
 <div class="container mb-4  justify-content-center">
     <div class="row">
         <div class="col-sm">
