--- a/templates/guarantee.html
+++ b/templates/guarantee.html
@@ -9,8 +9,8 @@
     </div>
 </div>
 <div class="container guarantee-container mb-4">
-    <div class="row">
-        <h5 class="lead p-3 text-center">At The Simple Solution, we GUARANTEE the fulfillment of four service commitments to our customers - or they receive 30 days of free service!</h5>
+    <div class="row justify-content-center">
+        <h5 class="lead p-3 ">At The Simple Solution, nothing is more important to us than your satisfaction.  We GUARANTEE the fulfillment of four service commitments to our customers - or they receive 30 days of free service!</h5>
     </div>
     <div class="row">
         <div class="col-sm">
@@ -21,7 +21,7 @@
                     </div>
                     <h4 class="card-title"></h4>
                     <p class="card-text">
-                        Sign up for a contract and what you don't use you don't lose. Each unconsumed hour rolls over into a new month, allowing your hours to be used efficiently.
+                        Sign up for a contract and what you don't use you don't lose. Each unconsumed hour rolls over into the next month, allowing you to get the most out of your contract with us.
                     </p>
                 </div>
             </div>
@@ -47,8 +47,7 @@
                     </div>
                     <h4 class="card-title"></h4>
                     <p class="card-text">
-                        Enjoy the economies of scale, sign up for a contract and your hours are automatically discounted depending upon the contract level you select. Our service rates are competitive and flexible to meet your objectives.
-                    </p>
+                        Multiple contract options to suit your specific needs.
                 </div>
             </div>
         </div>
@@ -60,7 +59,7 @@
                     </div>
                     <h4 class="card-title"></h4>
                     <p class="card-text">
-                        Automatically included in your service contract are 2 hours per month of auditing and tuning up your network performance. This includes checking for hardware/software errors and verifying nightly data back-up routines.</p>
+                    We WILL resolve your issue.  We are confident that our technicians can deal with any issue you bring to us, and we won't quit until you are satisfied with the resolution.</p>
                 </div>
             </div>
         </div>
