--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,10 @@
             <div class="text-center col-10">
                 <h4 class="display-4">Solutions Suited For Your Business Success</h4>
                 <h5 class="text-justify">
-                    Since 1989 we have specialized in providing first class service for business level Local and Wide area networks in the greater San Francisco Bay area. We find that most companies make it more difficult than it needs to be. We focus on making it Simple. Network Design, Cabling, Implementation and Support is what we specialize in. Our goal is to increase your network performance through excellence in network reliability, productivity, efficiency and data integrity— all at an affordable, flexible and manageable cost. We are platform agnostic and are familiar with the variety of issues that multiple platforms can present. Our team approach enables us to circle our wagons around the most difficult technology challenges.
+                    At The Simple Solution, we are committed to providing our clients with any technical support they might need.
+                    We provide a long list of services, so whatever your problem, The Simple Solution can help.
+
+                    <!-- Since 1989 we have specialized in providing first class service for business level Local and Wide area networks in the greater San Francisco Bay area. We find that most companies make it more difficult than it needs to be. We focus on making it Simple. Network Design, Cabling, Implementation and Support is what we specialize in. Our goal is to increase your network performance through excellence in network reliability, productivity, efficiency and data integrity— all at an affordable, flexible and manageable cost. We are platform agnostic and are familiar with the variety of issues that multiple platforms can present. Our team approach enables us to circle our wagons around the most difficult technology challenges. -->
                 </h5>
             </div>
         </div>
@@ -29,34 +32,43 @@
                 <div class="row justify-content-center pt-4">
                     <div class="col-sm text-center">
                         <div class="card">
+                          <div class="card-title">
+                            Guaranteed Service
+                          </div>
                             <i class="card-img-top fa fa-thumbs-o-up" aria-hidden="true" alt="Card image cap"></i>
                             <div class="card-body">
                                 <h4 class="card-text">
-                                Guaranteed Service
+                                Whatever your needs, we have the answer.  Our team of experienced technicians has seen it all, and with their combined experience, there's no issue we can't resolve for you.
+
                             </h4>
                             </div>
                         </div>
                     </div>
                     <div class="col-sm text-center">
                         <div class="card">
+                          <div class="card-title">
+                            Immediate Help
+                          </div>
                             <i class="card-img-top fa fa-life-ring" aria-hidden="true" alt="Card image cap"></i>
+
                             <div class="card-body">
                                 <h4 class="card-text">
-                                Immediate Help
+                            Can't afford to let a tech emergency shut you down?  Give us a call and we can assist you remotely.  Got an issue that requires someone on site?  We'll get a technician out to you as soon as possible.  We will do all we can to get your business up and running.
                             </h4>
                             </div>
                         </div>
                     </div>
                     <div class="col-sm text-center">
                         <div class="card">
+                          <div class="card-title">
+                            Multi-Platform Certification
+                          </div>
                             <i class="card-img-top fa fa-certificate" aria-hidden="true" alt="Card image cap"></i>
                             <div class="card-body">
                                 <h4 class="card-text">
-                                Multi-Platform Certification
+                                Need new phones, an operating system, cyber security software?  Having trouble maintaining the technology you're already using?  We're familiar with a wide range of products, so whatever technology your utilizing, we've got you covered.
                             </h4>
-                                <p class="card-text">
-                                    A One-Stop Resource
-                                </p>
+
                             </div>
                         </div>
                     </div>
