--- a/templates/services.html
+++ b/templates/services.html
@@ -16,10 +16,13 @@
                     <div class="text-center mb-2">
                         <i class="fa fa-users mb-4" aria-hidden="true"></i>
                         <h4 class="card-title">Business Networking</h4>
-                    <h6 class="card-subtitle mb-2 text-muted">BUSINESS NETWORKING INCREASE PRODUCTIVITY</h6>
+                    <h6 class="card-subtitle mb-2 text-muted">INCREASE PRODUCTIVITY</h6>
                     </div>
                     <p class="card-text">
-                        If you own or run a business, by now you have already realized that your network can be a competitive advantage or the bane of your existence. There is a small fortune tied up in your technology, so why not protect your investment and your data by outsourcing to a reliable resource to ensure productivity and performance?
+                        If you own or run a business, by now you have already realized that your network
+                        can be a competitive advantage or the bane of your existence.
+                        There is a small fortune tied up in your technology,
+                        we can help protect your investment by ensuring that your network runs smoothly.
                     </p>
                 </div>
             </div>
@@ -29,12 +32,14 @@
                 <div class="card-body">
                     <div class="mb-2 text-center">
                         <i class="fa fa-sitemap mb-4" aria-hidden="true"></i>
-                        <h4 class="card-title">Small Business Solutions</h4>
+                        <h4 class="card-title">Server Implementation and Maintenance</h4>
                     <h6 class="card-subtitle mb-2 text-muted">GROW YOUR BUSINESS</h6>
                     </div>
                     <p class="card-text">
-                        If you own the network, you own the problem. But shouldn’t you be doing something more important than chasing down the latest virus or hickey in your pipes? What productivity you manage to create in between tech “incidents” you more than waste by cruising the Yellow Pages looking for a Super Geek that will drop everything to come reboot your Nemesis. What if you could outsource to a reliable resource that you trusted, more than yourself, to ensure the productivity of your network?  
+                      Want to build your own server, or get on the cloud? Not sure which option is best for you?
+                       Our technicians have all the knowledge you need to find and implement the solution that's right for you.
                     </p>
+
                 </div>
             </div>
         </div>
