--- a/templates/cybersecurity.html
+++ b/templates/cybersecurity.html
@@ -13,13 +13,20 @@
     <div class="row justify-content-center">
         <h4 class="text-center">Security Matters</h4>
     </div>
-    <div class="row">
-        <h5 class="lead p-4 text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris cursus erat mi, sed tristique dolor gravida vel. Donec semper lectus at ex dapibus lobortis. Maecenas vitae venenatis eros. Etiam bibendum odio id lectus pretium elementum. Donec malesuada ut orci eget eleifend. Suspendisse imperdiet ex sapien, id accumsan lacus viverra eu. Praesent dictum pulvinar dignissim. Suspendisse malesuada, felis vitae pretium sollicitudin, urna neque pulvinar diam, id dignissim urna eros at turpis.
+    <div class="row justify-content-center">
+        <h5 class="lead p-4 text-center">
+          Rely on us to keep your business safe!
         </h5>
     </div>
-    <div class="row">
-        <h5 class="lead p-4 text-center">        
-            Morbi ut ornare est. Integer dictum lobortis volutpat. Nullam quis congue odio. Morbi dui turpis, consectetur vitae aliquet in, tincidunt nec felis. Nullam interdum non quam et aliquam. Integer at vestibulum sem. Donec ante libero, sagittis at magna non, cursus aliquam sapien. Duis faucibus et lorem vel posuere. Donec sit amet metus quis neque interdum pellentesque eu eu lectus.
+    <div class="row justify-content-center">
+        <h5 class="lead p-4">
+          Protecting your network and data is crucial to your business.
+          At The Simple Solution, we have all the experience you need to keep your business safe from cyber intrusion.
+          We can monitor activity on your network, check server logs for suspicous activity, and handle any security issues you come across.
+          Let us implement and monitor the tools you need to protect the things most important to you, so you can focus on your business.
+
+
+
         </h5>
     </div>
     <div class="row">
@@ -39,44 +46,20 @@
                 <li pdf_file="\static\alient_vault\AV-usm-central.pdf" pdf_thumb="\static\alient_vault\thumbnails\AV-usm-central-001.jpg" file_name="DS-USM-Anywhere" class="bg-transparent dropdown-item">
                     USM Central
                 </li>
-                <li pdf_file="\static\alient_vault\DS_Open_Threat_ES.pdf" pdf_thumb="\static\alient_vault\thumbnails\DS_Open_Threat_ES-001.jpg" file_name="AV-usm-central.pdf" class="bg-transparent  dropdown-item">
-                    DS Open Threat
-                </li>
-                <li pdf_file="\static\alient_vault\DS_Server-ES.pdf" pdf_thumb="\static\alient_vault\thumbnails\DS_Server-ES-001.jpg" file_name="DS_Server-ES.pdf" class="bg-transparent dropdown-item">
-                    DS Server ES
-                </li>
                 <li pdf_file="\static\alient_vault\ds-cisco-umbrella-alien-app.pdf" pdf_thumb="\static\alient_vault\thumbnails\ds-cisco-umbrella-alien-app-001.jpg" file_name="ds-cisco-umbrella-alien-app.pdf" class="bg-transparent dropdown-item">
                     Cisco Umbrella
-                </li>
-                <li pdf_file="\static\alient_vault\DS-USM-Anywhere.pdf" pdf_thumb="\static\alient_vault\thumbnails\DS-USM-Anywhere-001.jpg" file_name="DS-USM-Anywhere.pdf" class="bg-transparent dropdown-item">
-                    USM Anywhere
                 </li>
                 <li pdf_file="\static\alient_vault\usm-anywhere-plugins-list.pdf" pdf_thumb="\static\alient_vault\thumbnails\usm-anywhere-plugins-list-001.jpg" file_name="usm-anywhere-plugins-list.pdf" class="bg-transparent dropdown-item">
                     USM Anywhere Plugins
                 </li>
-                <li pdf_file="/static/alient_vault/alienapps-for-pan-data-sheet.pdf" pdf_thumb="/static/alienappsthumbnail-page-001.jpg" file_name="alienapps-for-pan-data-sheet.pdf" class="dropdown-item bg-transparent">
-                    AlienApps
-                </li>
                 <li pdf_file="\static\alient_vault\AlienVault_Data_Sheet_Simplify_Reporting_in_USM_Anywhere.pdf" pdf_thumb="\static\alient_vault\thumbnails\AlienVault_Data_Sheet_Simplify_Reporting_in_USM_Anywhere-001.jpg" file_name="AlienVault_Data_Sheet_Simplify_Reporting_in_USM_Anywhere.pdf" class="dropdown-item bg-transparent">
                     Simplify Reporting
                 </li>
-                <li pdf_file="\static\alient_vault\AlienVault-Logger.pdf" pdf_thumb="\static\alient_vault\thumbnails\AlienVault-Logger-001.jpg" file_name="AlienVault-Logger.pdf" class="dropdown-item bg-transparent">
-                    Logger
-                </li>
-                <li pdf_file="\static\alient_vault\AlienVault_Fact_Sheet.pdf" pdf_thumb="\static\alient_vault\thumbnails\AlienVault_Fact_Sheet-001.jpg" file_name="AlienVault_Fact_Sheet.pdf" class="dropdown-item bg-transparent">
-                    Fact Sheet
-                </li>
-                <li pdf_file="\static\alient_vault\AlienVault-Managed-Appliance-Service-Overview.pdf" pdf_thumb="\static\alient_vault\thumbnails\AlienVault-Managed-Appliance-Service-Overview-001.jpg" file_name="AlienVault-Managed-Appliance-Service-Overview.pdf" class="dropdown-item bg-transparent">
-                    Managed Appliance Service
-                </li>
-                <li pdf_file="/static/alient_vault/alienapps-for-pan-data-sheet.pdf" pdf_thumb="/static/alienappsthumbnail-page-001.jpg" file_name="alienapps-for-pan-data-sheet.pdf" class="dropdown-item bg-transparent">
+                <li pdf_file="/static/alient_vault/alienapps-for-pan-data-sheet.pdf" pdf_thumb="\static\alient_vault\thumbnails\AlienVault-Open-Threat-Exchange-001.jpg" file_name="alienapps-for-pan-data-sheet.pdf" class="dropdown-item bg-transparent">
                     Open Threat Exchange
                 </li>
                 <li pdf_file="\static\alient_vault\AlienVault-Sensor.pdf" pdf_thumb="\static\alient_vault\thumbnails\AlienVault-Sensor-001.jpg" file_name="AlienVault-Sensor.pdf" class="dropdown-item bg-transparent">
                     Sensor
-                </li>
-                <li pdf_file="\static\alient_vault\AlienVault-Server.pdf" pdf_thumb="\static\alient_vault\AlienVault-Server.pdf" file_name="AlienVault-Server.pdf" class="dropdown-item bg-transparent">
-                    Server
                 </li>
                 <li pdf_file="\static\alient_vault\av-success-services.pdf" pdf_thumb="\static\alient_vault\thumbnails\av-success-services-001.jpg" file_name="av-success-services.pdf" class="dropdown-item bg-transparent">
                     Success Services
