--- a/templates/about.html
+++ b/templates/about.html
@@ -33,7 +33,7 @@
                         <i class="fa fa-volume-control-phone " aria-hidden="true"></i>
                     </div>
                     <h4 class="card-title text-center">24 Hour Call Back</h4>
-                    <p class="card-text text-justify">
+                    <p class="card-text">
                         No matter what the time of day, you can talk to a human and get as fast a response as you require. No more sitting on pins and needles.
                     </p>
                 </div>
@@ -47,7 +47,7 @@
                     </div>
                     <h4 class="card-title text-center">Partnership</h4>
                     <br>
-                    <p class="card-text text-justify">
+                    <p class="card-text ">
                         Our team is dedicated to working with our clients as a member of their team. We respect our client’s preferences and feedback. We want what you want, a smooth path to efficiency, reliability and productivity.
                     </p>
                 </div>
@@ -60,7 +60,7 @@
                         <i class="fa fa-thumbs-o-down" aria-hidden="true"></i>
                     </div>
                     <h4 class="card-title text-center">No Voicemail Frustrations</h4>
-                    <p class="card-text text-justify">
+                    <p class="card-text ">
                         If you’ve ever felt that you had been left in the twilight zone ”on hold”, then you will welcome our streamlined communication systems. We get to the heart of the matter as quickly and efficiently as possible.</p>
                 </div>
             </div>
@@ -72,7 +72,7 @@
                         <i class="fa fa-users" aria-hidden="true"></i>
                     </div>
                     <h4 class="card-title text-center">Tight Teamwork</h4>
-                    <p class="card-text text-justify">
+                    <p class="card-text ">
                         Each technician is part of a bigger circle that they may draw on for resources, knowledge and perspective. Behind each client-facing tech is a team of additional resources.What’s more is that our teams stick together, technician retention rates average 5 years.</p>
                 </div>
             </div>
