--- a/site_audit/templates/audit_base.html
+++ b/site_audit/templates/audit_base.html
@@ -61,15 +61,67 @@
     </div>
 
     {% block content %} {% endblock %}
-    <div class="footer pt-4 pb-4">
-        <div class="footer-address justify-content-center">
-            <div class="text-center">
-                <h5 class="display-4 footer-tagline">IT Made Simple</h5>
-                <h5>THE SIMPLE SOLUTION</h5>
-                <h5>1052 North 5th Street</h5>
-                <h5>San Jose, CA 95112</h5>
-                <h5>408-295-9200</h5>
+    <div class="footer pt-4 pb-4   justify-content-center">
+        <div class="row justify-content-center pt-3">
+            <h4 class="footer-tagline mb-3">IT Made Simple</h4>
+        </div>
+        <hr class="mt-3 mb-4">
+        <div class="row">
+            <div class="col-sm">
+                <div class="card mb-3 bg-transparent">
+                    <div class="card-body">
+                        <h5 class="card-title">The Simple Solution</h5>
+
+                        <p class="card-text">
+                            1052 North 5th Street
+                            <br> San Jose, CA 95112.
+                        </p>
+                    </div>
+                </div>
             </div>
+            <div class="col-sm">
+                <div class="card mb-3 bg-transparent">
+                    <div class="card-body">
+                        <h5 class="card-title">The Simple Solution: Sales Office</h5>
+                        <p class="card-text">
+                            1060 North 5th Street
+                            <br> San Jose, CA, 95112
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm">
+                <div class="card mb-3 bg-transparent">
+                    <div class="card-body">
+                        <h5 class="card-title">Phone</h5>
+                        <p class="card-text">
+                             Local calls: <b>408-295-9200</b>
+                            <br> TOLL-FREE: <b>1-800-99-SIMPLE</b>
+                            <br> Fax: <b>408-295-4724</b>
+
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm">
+                <div class="card mb-3 bg-transparent">
+                    <div class="card-body">
+                        <h5 class="card-title">Sales and General Information</h5>
+                        <p class="card-text">
+                            <a href="mailto:sales@simplesol.com">sales@simplesol.com</a>
+                            <br> Employment opportunities:
+                            <a href="mailto:jobs@simplesol.com">jobs@simplesol.com</a>
+                            <br> Accounting:
+                            <a href="mailto:accounting@simplesol.com" target="_top">accounting@simplesol.com</a>
+                            <br> Appointment scheduling:
+                            <a href="mailto:scheduling@simplesol.com">scheduling@simplesol.com</a>
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row justify-content-center">
+            <h6 class="text-center">© The Simple Solution Computing, Inc. 2018</h6>
         </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
