--- a/templates/base.html
+++ b/templates/base.html
@@ -3,6 +3,16 @@
 
 <head>
     <meta charset="utf-8">
+    <meta name='keywords'content='servers, citrix, hosted exchange, mail, sillicon valley, on-site, off-site, remote support, cyber security, network audit, cabling, managed services, cloud, wireless, IT support, desktop support, 1989, VOIP, hosted VOIP, IP phones'>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src=“https://www.googletagmanager.com/gtag/js?id=UA-114568232-1“></script>
+    <script>
+     window.dataLayer = window.dataLayer || [];
+     function gtag(){dataLayer.push(arguments);}
+     gtag(‘js’, new Date());
+
+     gtag(‘config’, ‘UA-114568232-1’);
+    </script>
     <!-- Latest compiled and minified CSS -->
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
@@ -80,7 +90,7 @@
                 <div class="card mb-3 bg-transparent">
                     <div class="card-body">
                         <h5 class="card-title">The Simple Solution</h5>
-                        <br>
+
                         <p class="card-text">
                             1052 North 5th Street
                             <br> San Jose, CA 95112.
@@ -104,10 +114,10 @@
                     <div class="card-body">
                         <h5 class="card-title">Phone</h5>
                         <p class="card-text">
-                            <br> Local calls: <b>408-295-9200</b>
-                            <br> TOLL-FREE: <b>1-800-99SIMPLE</b>
+                             Local calls: <b>408-295-9200</b>
+                            <br> TOLL-FREE: <b>1-800-99-SIMPLE</b>
                             <br> Fax: <b>408-295-4724</b>
-                            <br>
+
                         </p>
                     </div>
                 </div>
@@ -130,7 +140,7 @@
             </div>
         </div>
         <div class="row justify-content-center">
-            <h6 class="text-center">© The Simple Solution 2018</h6>
+            <h6 class="text-center">© The Simple Solution Computing, Inc. 2018</h6>
         </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
