Fixed contacts html
Removed placeholder text from thanks page

--- a/contacts/templates/contact_thanks.html
+++ b/contacts/templates/contact_thanks.html
@@ -4,7 +4,7 @@
 {% block content %}
 
 <div class="jumbotron">
-  Thanks Hipstah!
+  Thank you, someone will be with you shortly
 </div>
 
 {% endblock %}
