Contact and cyber security template
Changed logo and removed break from footer

--- a/contacts/templates/contacts_base.html
+++ b/contacts/templates/contacts_base.html
@@ -81,7 +81,7 @@
                 <div class="card mb-3 bg-transparent">
                     <div class="card-body">
                         <h5 class="card-title">The Simple Solution</h5>
-                        
+
                         <p class="card-text">
                             1052 North 5th Street
                             <br> San Jose, CA 95112.
@@ -105,7 +105,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Phone</h5>
                         <p class="card-text">
-                            <br> Local calls: <b>408-295-9200</b>
+                            Local calls: <b>408-295-9200</b>
                             <br> TOLL-FREE: <b>1-800-99SIMPLE</b>
                             <br> Fax: <b>408-295-4724</b>
                             <br>
