--- a/templates/cybersecurity.html
+++ b/templates/cybersecurity.html
@@ -69,7 +69,7 @@
         <div class="col-sm justify-content-center m-4">
             <!-- Button trigger modal -->
             <a type="button" class="btn" data-toggle="modal" data-target="#datasheet">
-                  <img id="alienappthumb" src="https://res.cloudinary.com/djpxqfvbn/image/upload/v1473537816/products/ef09805e-d818-4846-a3d4-69d982d739c5.png" alt="alienvaultthumb" class="img-thumbnail">
+                  <img id="alienappthumb" src="static\SimpleSolutionLogo2017-black.png" alt="alienvaultthumb" class="img-thumbnail">
               </a>
         </div>
     </div>
