Security page logo
Fixed source file

--- a/templates/cybersecurity.html
+++ b/templates/cybersecurity.html
@@ -43,9 +43,7 @@
                 <li pdf_file="\static\alient_vault\usm-plugins-list.pdf" pdf_thumb="\static\alient_vault\thumbnails\usm-plugins-list-001.jpg" file_name="usm-plugins-list.pdf" class="bg-transparent dropdown-item">
                     USM Plugins
                 </li>
-                <li pdf_file="\static\alient_vault\AV-usm-central.pdf" pdf_thumb="\static\alient_vault\thumbnails\AV-usm-central-001.jpg" file_name="DS-USM-Anywhere" class="bg-transparent dropdown-item">
-                    USM Central
-                </li>
+
                 <li pdf_file="\static\alient_vault\ds-cisco-umbrella-alien-app.pdf" pdf_thumb="\static\alient_vault\thumbnails\ds-cisco-umbrella-alien-app-001.jpg" file_name="ds-cisco-umbrella-alien-app.pdf" class="bg-transparent dropdown-item">
                     Cisco Umbrella
                 </li>
@@ -69,7 +67,7 @@
         <div class="col-sm justify-content-center m-4">
             <!-- Button trigger modal -->
             <a type="button" class="btn" data-toggle="modal" data-target="#datasheet">
-                  <img id="alienappthumb" src="static\SimpleSolutionLogo2017-black.png" alt="alienvaultthumb" class="img-thumbnail">
+                  <img id="alienappthumb" src="\static\SimpleSolutionLogo2017-black.png" alt="alienvaultthumb" class="img-thumbnail">
               </a>
         </div>
     </div>
