--- a/templates/cybersecurity.html
+++ b/templates/cybersecurity.html
@@ -67,7 +67,7 @@
         <div class="col-sm justify-content-center m-4">
             <!-- Button trigger modal -->
             <a type="button" class="btn" data-toggle="modal" data-target="#datasheet">
-                  <img id="alienappthumb" src="\static\SimpleSolutionLogo2017-black.png" alt="alienvaultthumb" class="img-thumbnail">
+                  <img id="alienappthumb" src="\static\TSSLogoGrey.png" alt="alienvaultthumb" class="img-thumbnail">
               </a>
         </div>
     </div>
