Cyber Security Modal
Fixed modals for pdf so that they can be viewed more easily on mobile screens.

--- a/templates/base.html
+++ b/templates/base.html
@@ -113,12 +113,11 @@
                 <div class="card mb-3 bg-transparent">
                     <div class="card-body">
                         <h5 class="card-title">Phone</h5>
-                        <p class="card-text">
-                             Local calls: <b>408-295-9200</b>
-                            <br> TOLL-FREE: <b>1-800-99-SIMPLE</b>
+                        <div class="card-text">
+                             Local calls: <h5><b>408-295-9200</b></h5>
+                            <br> TOLL-FREE: <h5><b>1-800-99-SIMPLE</b></h5>
                             <br> Fax: <b>408-295-4724</b>
-
-                        </p>
+                        </div>
                     </div>
                 </div>
             </div>
