--- a/static/css/master.css
+++ b/static/css/master.css
@@ -1,7 +1,12 @@
+
             @media only screen and (max-width: 768px) {
             /* For mobile: */
+            .navbar-brand {
+                width: 20% !important;
+            }
             .display-3 {
                 font-size: 3.5em !important;
+
             }
 
             .bg-guarantee,
@@ -43,7 +48,7 @@
 
         .display-4,
         h4,
-        h5, 
+        h5,
         p {
             font-family: 'Josefin Sans', sans-serif;
         }
@@ -326,7 +331,16 @@
                 text: black;
             }
 
-            
+
 .list-group-item {
     border: 0px;
+}
+
+.modal-dialog{
+    position: relative;
+    display: table; /* This is important */
+    overflow-y: auto;
+    overflow-x: auto;
+    width: auto;
+    min-width: 300px;
 }
