--- a/site_audit/templates/audit_base.html
+++ b/site_audit/templates/audit_base.html
@@ -83,10 +83,10 @@
                 <div class="card mb-3 bg-transparent">
                     <div class="card-body">
                         <h5 class="card-title">The Simple Solution: Sales Office</h5>
-                        <p class="card-text">
+                        <div class="card-text">
                             1060 North 5th Street
                             <br> San Jose, CA, 95112
-                        </p>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -94,12 +94,12 @@
                 <div class="card mb-3 bg-transparent">
                     <div class="card-body">
                         <h5 class="card-title">Phone</h5>
-                        <p class="card-text">
-                             Local calls: <b>408-295-9200</b>
-                            <br> TOLL-FREE: <b>1-800-99-SIMPLE</b>
-                            <br> Fax: <b>408-295-4724</b>
+                        <div class="card-text">
+                          Local calls: <h5><b>408-295-9200</b></h5>
+                         <br> TOLL-FREE: <h5><b>1-800-99-SIMPLE</b></h5>
+                         <br> Fax: <b>408-295-4724</b>
 
-                        </p>
+                       </div>
                     </div>
                 </div>
             </div>
