--- a/site_audit/templates/audit_request.html
+++ b/site_audit/templates/audit_request.html
@@ -8,15 +8,13 @@
         </div>
     </div>
 </div>
-<div class="container guarantee-container mb-4">
-    <div class="row">
-        <h5 class="lead p-3 text-center">It’s always a good idea to get a fresh perspective on your network. Our 2 hour Network Audit won’t cost you a penny and the best part is that we will give you the straight scoop—suggestions on how to make your network more productive, efficient and manageable. 90% of our surveys reveal situations that left undetected may have put the respondent’s network at risk.</h5>
-    </div>
+<div class="card">
+  <div class="container-fluid sol-body w-70">
+      <form class="text-white pb-5" method="post">
+          {% csrf_token%} {% bootstrap_form form %}
+          <input type="submit" value="Request Audit">
+      </form>
+  </div>
 </div>
-<div class="container-fluid sol-body w-70">
-    <form class="text-white pb-5" method="post">
-        {% csrf_token%} {% bootstrap_form form %}
-        <input type="submit" value="Request Audit">
-    </form>
-</div>
+
 {% endblock %}
