--- a/site_audit/templates/audit_request.html
+++ b/site_audit/templates/audit_request.html
@@ -11,7 +11,8 @@
 <div class="card">
   <div class="container-fluid sol-body w-70">
       <form class="text-white pb-5" method="post">
-          {% csrf_token%} {% bootstrap_form form %}
+          {% csrf_token %}
+	 {% bootstrap_form form %}
           <input type="submit" value="Request Audit">
       </form>
   </div>
